
Version 3.2.5 - DEV
-------------------
 - Bugfix: check that compilation creates executable file, closes: #119.
 - Fix minor HTML validation error and PHP notice.
 - Stress better that disabling use_chroot is really not secure.
 - Install locales in chroot, necessary for ghc solutions.
 - Allow java main method to be final.
 - Fix bug that teampage_first_visit would be updated on each visit.

Version 3.2.4 - 12 September 2012
---------------------------------
 - Fix bug: add missing $pagename to check_judgings.php.
 - Fix bug: handle gracefully events deleted from the database.
 - Fix bug: submitclient compile error with g++ (Debian 4.7.1-2) 4.7.1.
 - Fix bug: link to CSS colour names reference was broken.
 - Make Java class name detection compatible with Java 7.
 - Make Haskell example source compatible with newer GHC versions.
 - Make checktestdata compatible with bisonc++ 3.0.
 - Add mapping to GeSHi highlighting to translate DOMjudge language
   ID's to their GeSHi counterparts.
 - Don't let sudo try to read passwords.
 - Use Debian 6.0 Squeeze for building Java chroot.
 - Various documentation improvements.

Version 3.2.3 - 2 June 2012
---------------------------
 - [INCOMPATIBLE CHANGE,security] enable cURL SSL host/peer verification
   in the command line submit client. This requires any self-signed
   certificates now to be available to libcURL on a team machine.
 - Fix SQL upgrade file for DB upgrade from 3.1 series.
 - Fix bug: don't show multiple balloons for a single problem solved.
 - Make all judging output binary in SQL to display non-UTF8 correctly.
 - Include a number of documentation improvements.
 - Fix: scoreboard filter disappeared with single affiliation selected.
 - Fix checktestdata debug print formatting.
 - Fix bug in using va_copy macro with g++ on AMD 64bit.
 - Fix bug: don't show unverified submission details if verification is
   required. Thanks Keith Johnson.
 - Do not show submission form when contest has not yet started.
