@@ -1,0 +1,16 @@
+// Generated by Bisonc++ V2.7.0 on Mon, 23 Jan 2012 10:54:22 +0100
+
+    // Include this file in the sources of the class Parser.
+
+// $insert class.h
+#include "parser.h"
+
+    // Add below here any includes etc. that are only 
+    // required for the compilation of Parser's sources.
+
+
+
+    // UN-comment the next using-declaration if you want to use
+    // symbols from the namespace std without specifying std::
+//using namespace std;
+
