@@ -8,6 +8,7 @@ Version 3.2.5 - DEV
  - Install locales in chroot, necessary for ghc solutions.
  - Allow java main method to be final.
  - Fix bug that teampage_first_visit would be updated on each visit.
+ - Fix bug with Makefile rules for autogenerated parser files.
 
 Version 3.2.4 - 12 September 2012
 ---------------------------------
